<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/food"
    tools:context=".view.LoginActivity">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="70dp"
        android:layout_marginBottom="-53dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="60dp">


            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="214dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/croissant_one"
                android:gravity="center"
                android:text="Login "
                android:textColor="#150A0A"
                android:textSize="40dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/btnGmail"
                app:layout_constraintEnd_toStartOf="@+id/tvline1"
                app:layout_constraintHorizontal_bias="0.062"
                app:layout_constraintStart_toEndOf="@+id/tvline2" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etLogEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Email"
                app:boxBackgroundMode="outline"
                app:hintTextAppearance="@color/secondary"
                app:hintTextColor="#676363">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/logEmalInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@android:drawable/sym_action_email"
                    android:drawablePadding="8dp"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>
            \

            <View
                android:layout_width="match_parent"
                android:layout_height="30dp" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etLogPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                app:boxBackgroundMode="outline"
                app:hintTextAppearance="@color/secondary"
                app:hintTextColor="#676363">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/logPassInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@android:drawable/ic_lock_idle_lock"
                    android:drawableEnd="@android:drawable/ic_lock_idle_lock"
                    android:drawablePadding="8dp"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/tvForget"
                android:layout_width="wrap_content"
                android:layout_height="53dp"
                android:layout_gravity="center"
                android:layout_marginTop="36dp"
                android:backgroundTint="@color/white"
                android:gravity="center"
                android:paddingTop="10dp"
                android:text="@string/btn_forget"
                android:textColor="#5C5555"
                android:textSize="20sp"
                app:cornerRadius="2dp"
                android:fontFamily="@font/croissant_one"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.947"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <Button
                android:id="@+id/btnLogin"
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:layout_width="225dp"
                android:layout_height="63dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/secondary"
                android:paddingTop="15dp"
                android:text="@string/login_button"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:cornerRadius="10dp"
                app:layout_constraintBottom_toTopOf="@+id/btnSignup"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


        </LinearLayout>


    </androidx.cardview.widget.CardView>

</RelativeLayout>