<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".homeScreen.view.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="375dp"
                android:layout_height="115dp"
                android:layout_gravity="center"
                android:layout_marginTop="28dp"
                android:fontFamily="@font/croissant_one"
                android:gravity="center"
                android:shadowColor="#80000000"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="4"
                android:text="Plan-Plate"
                android:textColor="#D36363"
                android:textSize="50dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.444"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvDaily"
                android:layout_width="380dp"
                android:layout_height="44dp"
                android:layout_marginTop="28dp"
                android:fontFamily="@font/croissant_one"
                android:text="@string/daily_inspiration"
                android:textColor="@color/black"
                android:textSize="30dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLogin" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvDaily"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDaily"
                tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                tools:listitem="@layout/inspiration_card"
                tools:orientation="horizontal"
                tools:spanCount="1" />


            <TextView
                android:id="@+id/tvCategory"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/croissant_one"
                android:text="@string/category_home"
                android:textColor="@color/black"
                android:textSize="30dp"
                android:layout_marginStart="20dp"
                app:layout_constraintBottom_toTopOf="@+id/rvCategory"
                app:layout_constraintTop_toBottomOf="@+id/rvDaily"
                app:layout_constraintVertical_bias="0.578"
                tools:layout_editor_absoluteX="47dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvCategory"
                tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                tools:listitem="@layout/category_card"
                tools:orientation="horizontal"
                tools:spanCount="1" />

            <TextView
                android:id="@+id/tvCountry"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:text="@string/country_home"
                android:textSize="30dp"
                android:textColor="@color/black"
                android:fontFamily="@font/croissant_one"
                android:layout_marginStart="20dp"
                app:layout_constraintTop_toBottomOf="@+id/rvCategory"
                tools:layout_editor_absoluteX="0dp" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvCountry"
                app:layout_constraintVertical_bias="0.311"
                tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                tools:listitem="@layout/country_card"
                tools:orientation="horizontal"
                tools:spanCount="1" />

            <View
                android:id="@+id/line3"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:background="@color/transparent"
                app:layout_constraintTop_toBottomOf="@+id/rvCountry"
                tools:layout_editor_absoluteX="0dp" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>